--- a/main.tex
+++ b/main.tex
@@ -179,7 +179,7 @@ $1^\textrm{st}$ Place Award, Massachusetts State Science and Engineering Fair \h
 
 
 \vspace{-.4cm}
-{\em NSF Graduate Research Fellowship with the LCO -- Goleta, CA}
+{\em NSF Graduate Research Fellowship --- Goleta, CA}
 
 \begin{changemargin}{-0.0cm}{2.5cm} 
 I use the LCO global network of telescopes to perform optical and spectroscopic follow-up of a wide variety of supernovae and transients. Using rapid follow-up observations combined with new shock cooling physics, I seek to better characterize and understand the mass stripping mechanism of Type IIb supernovae, and the underlying mechanisms powering superluminous supernovae. Additionally, I help with infrastructure maintenance and development for the robotic LCO platform.
@@ -192,7 +192,7 @@ I use the LCO global network of telescopes to perform optical and spectroscopic 
 {\bf Harvard-Smithsonian Center for Astrophysics}
 
 \vspace{-.4cm}
-{\em Member of the Black Hole Explorer Collaboration -- Cambridge, MA} \hfill 2020 - Present
+{\em Member of the Black Hole Explorer Collaboration --- Cambridge, MA} \hfill 2020 - Present
 
 \begin{changemargin}{-0.0cm}{2.5cm} 
 I develop analytic and deep learning techniques for measuring physical properties from the black hole's photon ring. Along with the BHEX collaboration, I assist in the preparation and development of the BHEX spacecraft, an orbiting radio telescope which will interface with the EHT and use space VLBI to make high resolution images and movies of black holes.
@@ -202,7 +202,7 @@ I develop analytic and deep learning techniques for measuring physical propertie
 
 
 % \vspace{-.4cm}
-{\em Smithsonian Fellowship with the Event Horizon Telescope -- Cambridge, MA} \hfill 2018 - 2021
+{\em Smithsonian Fellowship with the Event Horizon Telescope --- Cambridge, MA} \hfill 2018 - 2021
 
 \begin{changemargin}{-0.0cm}{2.5cm} 
 I image supermassive black holes and assist in observations using the Event Horizon Telescope in order to help take the first ever pictures of black holes. I explored alternative parametric representations of shadows in the Kerr metric and non-standard GR theories, and methods constraining the angular momentum of rotating black holes in EHT data using image- and Fourier-domain feature extraction methods. As an undergraduate, I was the first and only junior collaborator of the EHT Consortium. 
@@ -213,37 +213,37 @@ I image supermassive black holes and assist in observations using the Event Hori
 {\bf Quantum Computing Research Group}\hfill 2019 - 2021
 
 \vspace{-.4cm}
-{\em Research Intern with Dr. Alioscia Hamma  -- Boston, MA}
+{\em Research Intern with Dr. Alioscia Hamma  --- Boston, MA}
 
 \vspace{.1cm}
 {\bf Harvard Laboratory for Particle Physics and Cosmology}\hfill 2017 - 2018
 
 \vspace{-.4cm}
-{\em Research Intern with Dr. Melissa Franklin -- Cambridge, MA}
+{\em Research Intern with Dr. Melissa Franklin --- Cambridge, MA}
 
 % 
 {\bf QBism Research Group}\hfill 2017 - 2019
 
 \vspace{-.4cm}
-{\em Research Intern with Dr. Christopher Fuchs  -- Boston, MA}
+{\em Research Intern with Dr. Christopher Fuchs  --- Boston, MA}
 
 {\bf Harvard School for Engineering and Applied Sciences}\hfill Summer 2016
 
 \vspace{-.4cm}
-{\em Summer Research Intern mentored by Dr. Chinwendu Enyioha -- Cambridge, MA}
+{\em Summer Research Intern mentored by Dr. Chinwendu Enyioha --- Cambridge, MA}
 
 {\bf Tufts Department of Astrophysics}\hfill Summer 2015
 
 \vspace{-.4cm}
-{\em Summer Research Intern mentored by Dr. Anna Sajina -- Medford, MA}
+{\em Summer Research Intern mentored by Dr. Anna Sajina --- Medford, MA}
 
 
 
 
 \vspace{+.4cm}
-\section{{\sc Featured Publications  \\ \vspace{0.3cm} {\footnotesize Citations: 19000+ \\ \vspace{0.1cm} \noindent Ref'd Papers: 70+ \vspace{0.1cm} \\ $h$-index: 36 \\ i10-index: 63}} \\ }
+\section{{\sc Featured Publications  \\ \vspace{0.3cm} {\footnotesize Citations: 19000+ \\ \vspace{0.1cm} \noindent Ref'd Papers: 110+ \vspace{0.1cm} \\ $h$-index: 37 \\ i10-index: 68}} \\ }
 
-\textbf{NB:} Full list of publications on page 5
+\textbf{NB:} Please see full list of publications on page 6
 
 
 \footnote[$\dagger$]{\noindent $^\dagger$These six papers are the first results papers from the Event Horizon Telescope, presenting the first image of a black hole.}1--6. \textbf{Event Horizon Telescope Collaboration} et al. (2019) ApJL, 875, L2-6
@@ -397,11 +397,88 @@ Imaging a Black Hole with the Event Horizon Telescope. Harvard University, Cambr
 \section{\sc Publications} 
 \label{sec:publications}
 
-(last updated: Dec 2024)
+(last updated: Aug 2025)
 
-73. T. Szalai, R. Konyves-Toth, A. P. Nagy, ...\textbf{J. R. Farah} et al. (2024). \textit{ The story of SN 2021aatd: A peculiar 1987A-like supernova with an early-phase luminosity excess }. A\&A, 690, A17, 094201.
+111. S. H. Park, J. Rho, S.-C. Yoon, ...\textbf{J. R. Farah} et al. (2025). \textit{Near-Infrared Spectroscopy and Detection of Carbon Monoxide in the Type II Supernova SN 2023ixf}. arXiv:2507.11877.
 
-72. Z. Bora, R. Konyves-Toth, J. Vinko, ...\textbf{J. R. Farah} et al. (2024). \textit{ Ejecta Masses in Type Ia Supernovae—Implications for the Progenitor and the Explosion Scenario }. PASP, 136, 9, 094201.
+110. H. Sun, W.-X. Li, L.-D. Liu, ...\textbf{J. Farah} et al. (2025). \textit{A fast X-ray transient from a weak relativistic jet associated with a type Ic-BL supernova}. Nature Astronomy, 9, 1073–1085.
+
+109. S.-Q. Jiang, D. Xu, A. P. C. van Hoof, ...\textbf{J. R. Farah} et al. (2025). \textit{EP240801a/XRF 240801B: An X-Ray Flash Detected by the Einstein Probe and the Implications of Its Multiband Afterglow}. ApJL, 988(1), L34.
+
+108. L. Makrygianni, I. Arcavi, M. Newsome, ...\textbf{J. R. Farah} et al. (2025). \textit{The Double Tidal Disruption Event AT 2022dbl Implies that at Least Some “Standard” Optical Tidal Disruption Events Are Partial Disruptions}. ApJL, 987(1), L20.
+
+107. H. Kumar, E. Berger, P. K. Blanchard, ...\textbf{J. R. Farah} et al. (2025). \textit{A Near-infrared Search for Helium in the Superluminous Supernova SN 2024ahr}. ApJ, 987(2), 127.
+
+106. R. Dahale, I. Cho, K. Moriyama, ...\textbf{J. R. Farah} et al. (2025). \textit{Origin of the ring ellipticity in the black hole images of M87$^{*}$}. A&A, 699, A279.
+
+105. C. Goddi, D. F. Carlos, G. B. Crew, ...\textbf{J. R. Farah} et al. (2025). \textit{First polarization study of the M87 jet and active galactic nuclei at submillimeter wavelengths with ALMA}. A&A, 699, A265.
+
+104. Z.-Y. Wang, A. Pastorello, Y.-Z. Cai, ...\textbf{J. R. Farah} et al. (2025). \textit{Massive stars exploding in a He-rich circumstellar medium. XI. Diverse evolution of five Ibn SNe 2020nxt, 2020taz, 2021bbv, 2023utc and 2024aej}. arXiv, arXiv:2506.15139.
+
+103. H. Kumar, E. Berger, P. K. Blanchard, ...\textbf{J. R. Farah} et al. (2025). \textit{A Detection of Helium in the Bright Superluminous Supernova SN 2024rmj}. arXiv, arXiv:2506.06417.
+
+102. B. Palit, M. Śniegowska, A. Markowitz, ...\textbf{J. R. Farah} et al. (2025). \textit{Markarian 590: the AGN awakens}. MNRAS, 540(1), L14–L20.
+
+101. F. Onori, M. Nicholl, P. Ramsden, ...\textbf{J. R. Farah} et al. (2025). \textit{The case of AT2022wtn: a tidal disruption event in an interacting galaxy}. MNRAS, 540(1), 498–520.
+
+100. X. Zeng, L. Hu, S. Zheng, ...\textbf{J. R. Farah} et al. (2025). \textit{SN 2023ehl: A Normal Type Ia Supernova with High-velocity Features}. ApJ, 986(1), 68.
+
+99. X. Ma, X. Wang, J. Mo, ...\textbf{J. Farah} et al. (2025). \textit{Supernovae at distances <40 Mpc: II. Supernova rate in the local Universe}. A&A, 698, A306.
+
+98. X. Ma, X. Wang, J. Mo, ...\textbf{J. Farah} et al. (2025). \textit{Supernovae at distances <40 Mpc: I. Catalogues and fractions of supernovae in a complete sample}. A&A, 698, A305.
+
+97. X. Zeng, Y. Luo, X. Wang, ...\textbf{J. R. Farah} et al. (2025). \textit{SN 2023xqm: A gradually fading Ia supernova exhibiting isolated high-velocity signatures}. A&A, 698, A70.
+
+96. W. V. Jacobson-Galán, L. Dessart, K. W. Davis, ...\textbf{J. R. Farah} et al. (2025). \textit{Final Moments III: Explosion Properties and Progenitor Constraints of CSM-Interacting Type II Supernovae}. arXiv, arXiv:2505.04698.
+
+95. L. A. Kwok, M. Singh, S. W. Jha, ...\textbf{J. R. Farah} et al. (2025). \textit{JWST and Ground-based Observations of the Type Iax Supernovae SN 2024pxl and SN 2024vjm: Evidence for Weak Deflagration Explosions}. arXiv, arXiv:2505.02944.
+
+94. M. Singh, L. A. Kwok, S. W. Jha, ...\textbf{J. R. Farah} et al. (2025). \textit{Photometry and Spectroscopy of SN 2024pxl: A Luminosity Link Among Type Iax Supernovae}. arXiv, arXiv:2505.02943.
+
+93. B. M. Subrayan, D. J. Sand, K. A. Bostroem, ...\textbf{J. R. Farah} et al. (2025). \textit{Early Shock-Cooling Observations and Progenitor Constraints of Type IIb SN 2024uwq}. arXiv, arXiv:2505.02908.
+
+92. M. Liu, Y. Zhang, Y. Wang, ...\textbf{J. R. Farah} et al. (2025). \textit{Detection of an Orphan X-Ray Flare from a Blazar Candidate EP240709a with the Einstein Probe}. ApJ, 984(1), 5.
+
+91. M. Śniegowska, B. Trakhtenbrot, L. Makrygianni, ...\textbf{J. R. Farah} et al. (2025). \textit{AT 2019aalc: a Bowen Fluorescence Flare With a Precursor Flare in an Active Galactic Nucleus}. arXiv, arXiv:2505.00083.
+
+90. W.-X. Li, Z.-P. Zhu, X.-Z. Zou, ...\textbf{J. R. Farah} et al. (2025). \textit{An extremely soft and weak fast X-ray transient associated with a luminous supernova}. arXiv, arXiv:2504.17034.
+
+89. R. Baer-Way, P. Chandra, M. Modjaz, ...\textbf{J. R. Farah} et al. (2025). \textit{A Multiwavelength Autopsy of the Interacting Type IIn Supernova 2020ywx: Tracing Its Progenitor Mass-loss History for 100 Yr Before Death}. ApJ, 983(2), 101.
+
+88. A. Pastorello, A. Reguitti, L. Tartaglia, ...\textbf{J. R. Farah} et al. (2025). \textit{A long-lasting eruption heralds SN 2023ldh, a clone of SN 2009ip}. arXiv, arXiv:2503.23123.
+
+87. M. Shrestha, S. DeSoto, D. J. Sand, ...\textbf{J. R. Farah} et al. (2025). \textit{Spectropolarimetry of SN 2023ixf Reveals Both Circumstellar Material and an Aspherical Helium Core}. ApJL, 982(1), L32.
+
+86. A. P. Ravi, S. Valenti, Y. Dong, ...\textbf{J. R. Farah} et al. (2025). \textit{Luminous Type II Short-plateau SN 2023ufx: Asymmetric Explosion of a Partially Stripped Massive Progenitor}. ApJ, 982(1), 12.
+
+85. J. Röder, M. Wielgus, A. P. Lobanov, ...\textbf{J. R. Farah} et al. (2025). \textit{A multifrequency study of sub-parsec jets with the Event Horizon Telescope}. A&A, 695, A233.
+
+84. A. Gagliano, V. A. Villar, T. Matsumoto, ...\textbf{J. R. Farah} et al. (2025). \textit{Evidence for an Instability-Induced Binary Merger in the Double-Peaked, Helium-Rich Type IIn Supernova 2023zkd}. arXiv, arXiv:2502.19469.
+
+83. J. E. Andrews, M. Shrestha, K. A. Bostroem, ...\textbf{J. R. Farah} et al. (2025). \textit{Asymmetries and Circumstellar Interaction in the Type II SN 2024bch}. ApJ, 980(1), 37.
+
+82. N. Yesmin, C. Pellegrino, M. Modjaz, ...\textbf{J. R. Farah} et al. (2025). \textit{Spectral dataset of young type Ib supernovae and their time evolution}. A&A, 693, A307.
+
+
+81. \textbf{Event Horizon Telescope Collaboration} et al. (2025). \textit{The persistent shadow of the supermassive black hole of M87: II. Model comparisons and theoretical interpretations}. A&A, 693, A265.
+
+80. M. Newsome, I. Arcavi, D. A. Howell, ...\textbf{J. R. Farah} et al. (2024). \textit{Mapping the Inner 0.1 pc of a Supermassive Black Hole Environment with the Tidal Disruption Event and Extreme Coronal-line Emitter AT 2022upj}. ApJ, 977(2), 258.
+
+79. Y. Dong, D. Tsuna, S. Valenti, ...\textbf{J. R. Farah} et al. (2024). \textit{SN2023fyq: A Type Ibn Supernova with Long-standing Precursor Activity Due to Binary Interaction}. ApJ, 977(2), 254.
+
+78. C. Pellegrino, M. Modjaz, Y. Takei, ...\textbf{J. R. Farah} et al. (2024). \textit{The X-Ray Luminous Type Ibn SN 2022ablq: Estimates of Preexplosion Mass Loss and Constraints on Precursor Emission}. ApJ, 977(1), 2.
+
+77. A.-K. Baczko, M. Kadler, E. Ros, ...\textbf{J. R. Farah} et al. (2024). \textit{The putative center in NGC 1052}. A&A, 692, A205.
+
+76. J. C. Algaba, M. Baloković, S. Chandra, ...\textbf{J. R. Farah} et al. (2024). \textit{Broadband multi-wavelength properties of M87 during the 2018 EHT campaign including a very high energy flaring episode}. A&A, 692, A140.
+
+75. H. Kumar, E. Berger, D. Hiramatsu, ...\textbf{J. R. Farah} et al. (2024). \textit{AT2023vto: An Exceptionally Luminous Helium Tidal Disruption Event from a Massive Star}. ApJL, 974(2), L36.
+
+74. Y. Dong, S. Valenti, C. Ashall, ...\textbf{J. R. Farah} et al. (2024). \textit{Characterizing the Rapid Hydrogen Disappearance in SN 2022crv: Evidence of a Continuum between Type Ib and IIb Supernova Properties}. ApJ, 974(2), 316.
+
+73. T. Szalai, R. Konyves-Toth, A. P. Nagy, ...\textbf{J. R. Farah} et al. (2024). \textit{ The story of SN 2021aatd: A peculiar 1987A-like supernova with an early-phase luminosity excess }. A\&A, 690, A17.
+
+72. Z. Bora, R. Konyves-Toth, J. Vinko, ...\textbf{J. R. Farah} et al. (2024). \textit{ Ejecta Masses in Type Ia Supernovae—Implications for the Progenitor and the Explosion Scenario }. PASP, 136, 9.
 
 71. M. Shrestha, K. A. Bostroem, D. J. Sand, ...\textbf{J. R. Farah} et al. (2024). \textit{ Extended Shock Breakout and Early Circumstellar Interaction in SN 2024ggi }. ApJL, 972, 1, L15.
 
@@ -468,7 +545,7 @@ Imaging a Black Hole with the Event Horizon Telescope. Harvard University, Cambr
 
 41. A. Bostroem, L. Dessart,  D. John Hillier, ... \textbf{J. R. Farah} et al. 2023. \textit{SN 2022acko: the First Early Far-Ultraviolet Spectra of a Type IIP Supernova}. 2023. arXiv:2305.01654.
 
-40. T. Ben-Ami, I. Arcavi, M. Newsome, \textbf{J. R. Farah} et al. \textit{The Type Ibn Supernova 2019kbj -- Indications for Diversity in Type Ibn Supernova Progenitors}. ApJ, 946, 1.
+40. T. Ben-Ami, I. Arcavi, M. Newsome, \textbf{J. R. Farah} et al. \textit{The Type Ibn Supernova 2019kbj --- Indications for Diversity in Type Ibn Supernova Progenitors}. ApJ, 946, 1.
 
 39. S. Jorstand, M. Wielgus, R. Lico, ..., and the \textbf{Event Horizon Telescope Collaboration}. 2023. \textit{The Event Horizon Telescope Image of the Quasar NRAO 530}. ApJ, 943, 2.
  
@@ -508,7 +585,9 @@ Imaging a Black Hole with the Event Horizon Telescope. Harvard University, Cambr
 
 \vspace{+.4cm}
 \section{\sc Conference publications}
-(last updated: Dec 2024)
+(last updated: Aug 2025)
+
+M. D. Johnson, K. Akiyama, R. Baturin, ...\textbf{J. Farah} et al. (2024). \textit{The Black Hole Explorer: motivation and vision}. In: Space Telescopes and Instrumentation 2024: Optical, Infrared, and Millimeter Wave (SPIE Conf. Ser. 13092), 130922D.
 
 Haworth, K., Johnson, M.~D., Pesce, D.~W., ... \textbf{J. R. Farah}  et al.\ 2019. \textit{Studying black holes on horizon scales with space-VLBI}. arXiv:1909.01405 
 
@@ -519,7 +598,7 @@ Fabbiano, E., Berriman, B., Bose, C., ... \textbf{J. R. Farah}, et al. 2019. \te
 
 \vspace{+.4cm}
 \section{\sc Technical publications}
-(last updated: Dec 2024)
+(last updated: Aug 2025)
 
 Chael A., Bouman, K., Johnson  M., Wielgus M., Blackburn L., Chan C., \textbf{Farah J.}, Palumbo D., Pesce D., et al. 2022. \textit{eht-imaging: v1.2.4: Imaging interferometric data with regularized maximum likelihood}. Zenodo (software) publication.
 
@@ -533,8 +612,48 @@ Felt N, Franklin M, Giorimini P, Rogan C, Tuna A, Wang A, \textbf{Farah J}. 2017
 
 \vspace{+.4cm}
 \section{\sc Classifications, telegrams, and circulars}
-(last updated: Dec 2024)
+(last updated: Aug 2025)
 %% using icarus from ADS
+\bibitem[Farah et al.(2025)]{2025TNSCR3013....1F} Farah, J., Andrews, M., Wynn, K., Howell, D.~A., McCully, C.\ 2025.\ Global SN Project Transient Classification Report for 2025-07-31.\ Transient Name Server Classification Report 2025-3013.
+\bibitem[Andrews et al.(2025)]{2025TNSCR2699....1A} Andrews, M., Farah, J., Wynn, K., Bosteroem, A., Howell, D.~A., McCully, C.\ 2025.\ Global SN Project Transient Classification Report for 2025-07-14.\ Transient Name Server Classification Report 2025-2699.
+\bibitem[Li et al.(2025)]{2025GCN.40975....1L} Li, W.~X. and 8 colleagues 2025.\ EP250704a/GRB 250704B: GSP observations of the optical counterpart.\ GRB Coordinates Network, Circular Service, No. 40975 40975.
+\bibitem[Farah et al.(2025)]{2025TNSCR2162....1F} Farah, J., Andrew, M., Howell, D.~A., McCully, C., Ni, Y.~Q., Wynn, K.\ 2025.\ Global SN Project Transient Classification Report for 2025-06-09.\ Transient Name Server Classification Report 2025-2162.
+\bibitem[Ni et al.(2025)]{2025TNSCR2041....1N} Ni, C., Andrews, M., Farah, J., Wynn, K., Howell, D.~A., McCully, C.\ 2025.\ Global SN Project Transient Classification Report for 2025-05-30.\ Transient Name Server Classification Report 2025-2041.
+\bibitem[Ni et al.(2025)]{2025TNSCR2027....1N} Ni, C., Andrews, M., Farah, J., Wynn, K., Howell, D.~A., McCully, C.\ 2025.\ Global SN Project Transient Classification Report for 2025-05-29.\ Transient Name Server Classification Report 2025-2027.
+\bibitem[Andrews et al.(2025)]{2025TNSCR1947....1A} Andrews, M., Farah, J., Ni, C., Wynn, K., Howell, D.~A., McCully, C.\ 2025.\ Global SN Project Transient Classification Report for 2025-05-24.\ Transient Name Server Classification Report 2025-1947.
+\bibitem[Ni et al.(2025)]{2025TNSCR1733....1N} Ni, C., Andrews, M., Farah, J., Wynn, K., Howell, D.~A., McCully, C.\ 2025.\ Global SN Project Transient Classification Report for 2025-05-09.\ Transient Name Server Classification Report 2025-1733.
+\bibitem[Baldini et al.(2025)]{2025TNSCR1720....1B} Baldini, P. and 7 colleagues 2025.\ Transient Classification Report for 2025-05-08.\ Transient Name Server Classification Report 2025-1720.
+\bibitem[Baldini et al.(2025)]{2025TNSAN.142....1B} Baldini, P. and 7 colleagues 2025.\ Spectroscopic classification of the re-brightening associated with AT 2021gqu as a SNIa-pec..\ Transient Name Server AstroNote 142.
+\bibitem[Andrews et al.(2025)]{2025TNSCR1539....1A} Andrews, M., Farah, J., Ni, C., Wynn, K., Howell, D.~A., McCully, C.\ 2025.\ Global SN Project Transient Classification Report for 2025-04-25.\ Transient Name Server Classification Report 2025-1539.
+\bibitem[Andrews et al.(2025)]{2025TNSCR1531....1A} Andrews, M., Farah, J., Ni, C., Wynn, K., Howell, D.~A., McCully, C.\ 2025.\ Global SN Project Transient Classification Report for 2025-04-24.\ Transient Name Server Classification Report 2025-1531.
+\bibitem[Newsome et al.(2025)]{2025TNSCR1351....1N} Newsome, M. and 8 colleagues 2025.\ Transient Classification Report for 2025-04-10.\ Transient Name Server Classification Report 2025-1351.
+\bibitem[Li et al.(2025)]{2025GCN.40157....1L} Li, W.~X. and 8 colleagues 2025.\ EP250416a: GSP optical upper limit.\ GRB Coordinates Network, Circular Service, No. 40157 40157.
+\bibitem[Andrews et al.(2025)]{2025TNSCR1076....1A} Andrews, M., Farah, J., Howell, D.~A., McCully, C.\ 2025.\ Transient Classification Report for 2025-03-21.\ Transient Name Server Classification Report 2025-1076.
+\bibitem[Andrews et al.(2025)]{2025TNSCR1033....1A} Andrews, M., Farah, J., Howell, D.~A., McCully, C.\ 2025.\ Transient Classification Report for 2025-03-18.\ Transient Name Server Classification Report 2025-1033.
+\bibitem[Andrews et al.(2025)]{2025TNSCR.991....1A} Andrews, M., Farah, J., Howell, D.~A., McCully, C.\ 2025.\ Transient Classification Report for 2025-03-14.\ Transient Name Server Classification Report 2025-991.
+\bibitem[Andrews et al.(2025)]{2025TNSCR.977....1A} Andrews, M., Farah, J., Howell, D.~A., McCully, C.\ 2025.\ Transient Classification Report for 2025-03-13.\ Transient Name Server Classification Report 2025-977.
+\bibitem[Farah et al.(2025)]{2025TNSCR.922....1F} Farah, J., Andrews, M., Ni, C., Howell, D.~A., McCully, C.\ 2025.\ Transient Classification Report for 2025-03-08.\ Transient Name Server Classification Report 2025-922.
+\bibitem[Andrews et al.(2025)]{2025TNSCR.914....1A} Andrews, M. and 6 colleagues 2025.\ Transient Classification Report for 2025-03-07.\ Transient Name Server Classification Report 2025-914.
+\bibitem[Shrestha et al.(2025)]{2025GCN.39896....1S} Shrestha, M. and 13 colleagues 2025.\ GRB 250327B: Las Cumbres optical counterpart detection.\ GRB Coordinates Network, Circular Service, No. 39896 39896.
+\bibitem[Li et al.(2025)]{2025GCN.39627....1L} Li, W.~X. and 8 colleagues 2025.\ EP250308a: GSP optical upper limit.\ GRB Coordinates Network, Circular Service, No. 39627 39627.
+\bibitem[Andrews et al.(2025)]{2025TNSCR.802....1A} Andrews, M., Hiramatsu, D., Farah, J., Howell, D.~A., McCully, C.\ 2025.\ Transient Classification Report for 2025-02-26.\ Transient Name Server Classification Report 2025-802.
+\bibitem[Farah et al.(2025)]{2025TNSCR.530....1F} Farah, J., Andrews, M., Ni, C., Howell, D.~A., McCully, C., Wynn, K.\ 2025.\ Transient Classification Report for 2025-02-07.\ Transient Name Server Classification Report 2025-530.
+\bibitem[Li et al.(2025)]{2025GCN.39489....1L} Li, W.~X. and 8 colleagues 2025.\ EP250226a/GRB 250226A: GSP detects optical counterpart.\ GRB Coordinates Network, Circular Service, No. 39489 39489.
+\bibitem[Li et al.(2025)]{2025GCN.39477....1L} Li, W.~X. and 8 colleagues 2025.\ EP250225a: GSP optical upper limit.\ GRB Coordinates Network, Circular Service, No. 39477 39477.
+\bibitem[Faris et al.(2025)]{2025TNSCR..25....1F} Faris, S. and 6 colleagues 2025.\ StarDestroyers Transient Classification Report for 2025-01-02.\ Transient Name Server Classification Report 2025-25.
+\bibitem[Andrews et al.(2024)]{2024TNSCR4593....1A} Andrews, M., Farah, J., Ni, C., Howell, D.~A., McCully, C.\ 2024.\ Global SN Project Transient Classification Report for 2024-11-22.\ Transient Name Server Classification Report 2024-4593.
+\bibitem[Newsome et al.(2024)]{2024TNSCR4486....1N} Newsome, M. and 6 colleagues 2024.\ Transient Classification Report for 2024-11-13.\ Transient Name Server Classification Report 2024-4486.
+\bibitem[Newsome et al.(2024)]{2024TNSCR4446....1N} Newsome, M. and 6 colleagues 2024.\ Transient Classification Report for 2024-11-11.\ Transient Name Server Classification Report 2024-4446.
+\bibitem[Faris et al.(2024)]{2024TNSCR4428....1F} Faris, S. and 6 colleagues 2024.\ StarDestroyers Transient Classification Report for 2024-11-10.\ Transient Name Server Classification Report 2024-4428.
+\bibitem[Newsome et al.(2024)]{2024TNSCR4337....1N} Newsome, M. and 6 colleagues 2024.\ Transient Classification Report for 2024-11-05.\ Transient Name Server Classification Report 2024-4337.
+\bibitem[Li et al.(2024)]{2024GCN.38338....1L} Li, W.~X. and 8 colleagues 2024.\ EP241126a: GSP detects optical counterpart.\ GRB Coordinates Network, Circular Service, No. 38338 38338.
+\bibitem[Li et al.(2024)]{2024GCN.38127....1L} Li, W.~X. and 8 colleagues 2024.\ EP241107a: GSP detects optical counterpart.\ GRB Coordinates Network, Circular Service, No. 38127 38127.
+\bibitem[Faris et al.(2024)]{2024TNSCR4005....1F} Faris, S. and 6 colleagues 2024.\ StarDestroyers Transient Classification Report for 2024-10-14.\ Transient Name Server Classification Report 2024-4005.
+\bibitem[Shrestha et al.(2024)]{2024GCN.37913....1S} Shrestha, M. and 11 colleagues 2024.\ GRB 241026A: Las Cumbres optical detection.\ GRB Coordinates Network, Circular Service, No. 37913 37913.
+\bibitem[Li et al.(2024)]{2024GCN.37844....1L} Li, W.~X. and 8 colleagues 2024.\ EP241021a: GSP detects optical candidate counterpart.\ GRB Coordinates Network, Circular Service, No. 37844 37844.
+\bibitem[Newsome et al.(2024)]{2024TNSCR3794....1N} Newsome, M., Andrews, M., Farah, J., Howell, D.~A., McCully, C.\ 2024.\ Global SN Project Transient Classification Report for 2024-09-30.\ Transient Name Server Classification Report 2024-3794.
+\bibitem[Andrews et al.(2024)]{2024TNSCR3490....1A} Andrews, M., Farah, J., Howell, D.~A., McCully, C.\ 2024.\ Transient Classification Report for 2024-09-13.\ Transient Name Server Classification Report 2024-3490.
+
 \bibitem[Andrews et al.(2024)]{2024TNSCR3471....1A} Andrews, M., Farah, J., Howell, D.~A., McCully, C.\ 2024.\ Transient Classification Report for 2024-09-12.\ Transient Name Server Classification Report 2024-3471.
 \bibitem[Bostroem et al.(2024)]{2024TNSCR2571....1B} Bostroem, K.~A. and 24 colleagues 2024.\ DLT40 Transient Classification Report for 2024-07-24.\ Transient Name Server Classification Report 2024-2571.
 \bibitem[Newsome et al.(2024)]{2024TNSCR1687....1N} Newsome, M., Farah, J., Howell, D.~A., McCully, C., Gonzalez, E.~P., Terreran, G.\ 2024.\ Global SN Project Transient Classification Report for 2024-05-28.\ Transient Name Server Classification Report 2024-1687.
